2002-08-06  John Levon  <levon@movementarian.org>

	* sp_spell.C: let the new aspell pspell work
 
2002-08-01  John Levon  <levon@movementarian.org>

	* lyxfunc.C: let user specify a non-existent file on open
 
2002-07-26  Juergen Vigna  <jug@sad.it>

	* lyxfunc.C (dispatch):change LyXFind function call.

	* lyxfind.C (various): Don't lock insets while searching only
	when we found a string. This speed ups the whole stuff a lot
	
2002-07-23  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* paragraph_pimpl.C (simpleTeXSpecialChars): close fonts before
	insets which have noFontChange == true. (bug #172)

2002-07-20  Dekel Tsur  <dekelts@tau.ac.il>

	* BufferView_pimpl.C (workAreaButtonRelease): Fix opening of
	a bibitem inset in a RTL paragraph.

	* language.C (read): Use iso8859-1 encoding in latex_lang
	(this prevents LyX from crashing when using iso10646-1 encoding).

2002-07-19  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* text2.C (toggleInset): if cursor is inside an inset, close the
	inset and leave cursor _after_ it

2002-07-19  Dekel Tsur  <dekelts@tau.ac.il>

	* text.C (drawChars): Fix Arabic text rendering.

2002-07-13  Dekel Tsur  <dekelts@tau.ac.il>

	* lyxfunc.C (dispatch): Correct cursor behaviour when exiting
	an inset in a RTL paragraph.

2002-07-16  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* MenuBackend.C (expand): add numeric shortcuts to document menu

2002-07-15  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* lyxfont.C (setLyXFamily): 
	(setLyXSeries): 
	(setLyXShape): 
	(setLyXSize): 
	(setLyXMisc): 
	(lyxRead): 
	* debug.C (value): 
	* buffer.C (asciiParagraph): use ascii_lowercase

2002-07-15  Mike Fabian  <mfabian@suse.de>

	* lyxlex_pimpl.C (search_kw): 
	* lyxlex.C (getLongString): 
	* converter.h (operator<): 
	* converter.C (operator<): 
	* buffer.C (parseSingleLyXformat2Token): 
	(asciiParagraph): 
	* ToolbarDefaults.C (read): 
	* MenuBackend.C (checkShortcuts): 
	(read): 
	* LColor.C (getFromGUIName):