@@ -71,7 +71,7 @@ What's new
 - fix bug where using case changing commands on the last word of a
   paragraph would change the whole document (without any undo possible!)
 
-- fix performance bug when selecting table cells with the mouse
+- fix performance bugs when selecting with the mouse
 
 - in commands that operate on words (Insert>Index...), make sure not
   to include insets in words
