@@ -1,3 +1,8 @@
+2002-07-26  John Levon  <levon@movementarian.org>
+
+	* WorkArea.C (work_area_handler): set y_old and x_old to some
+	values in the MOUSE or DRAG events
+
 2002-08-06  John Levon  <levon@movementarian.org>
 
 	* sp_spell.C: let the new aspell pspell work
